--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="default_notification_channel_id" translatable="false">"fcm_default_channel"</string>
+    <string name="channel_description" translatable="false">"fcm_channel_description"</string>
+    <string name="channel_name">Gings</string>
+
+
 </resources>
